# obsidian-summarizer

./: .gitignore  CLAUDE.md  README.md  clipping_watcher.py  config.example.yaml  config.py  pyproject.toml  test_article_processor.py
.claude/: settings.json
docs/: architecture.md
docs/superpowers/plans/: 2026-03-10-clipping-watcher-v2.md
docs/superpowers/specs/: 2026-03-10-clipping-watcher-v2-design.md
extractors/: article.py  base.py  classifier.py  quality_gate.py  video.py
llm/: base.py  factory.py  ollama.py  openai_compatible.py
templates/: failed_extraction.md.j2  summary.md.j2
tests/: test_article_extractor.py  test_classifier.py  test_clipping_processor.py  test_config.py  test_llm_providers.py  test_quality_gate.py  test_template_rendering.py  test_video_extractor.py
